# Employee-Leave-Management

./: Employee_Leave_Management.postman_collection.json  README.md  auth.py  crud.py  database.py  init_db.py  main.py  models.py  pyproject.toml  schema.sql  schemas.py  seed_data.py
routers/: admins.py  approvals.py  audit_logs.py  auth.py  employees.py  leave_balances.py  leave_types.py  leaves.py  managers.py
